# edge_SDK

./: .gitignore  .~lock.SDK_guide.docx#  README.md  Untitled Diagram.drawio
_obsolete/sample_code_orin(temp)/RiskAssessment/src/: main_riskassessment.cpp
_obsolete/sample_code_orin(temp)/common_orin/e2e/: vsomeip.json
sample_code/ControlHub/: CMakeLists.txt  ControlHub.arxml  LICENSE
sample_code/ControlHub/src/: main_controlhub.cpp  main_controlhub.hpp
sample_code/DataFusion/: CMakeLists.txt  DataFusion.arxml  config.ini  lists.ini
sample_code/DataFusion/231020_matlab_converted/: AssignerGNN.h  EDGE_fusion_function_231019_2222_data.cpp  EDGE_fusion_function_231019_2222_data.h  EDGE_fusion_function_231019_2222_initialize.cpp  EDGE_fusion_function_231019_2222_internal_types.h  EDGE_fusion_function_231019_2222_rtwutil.cpp  EDGE_fusion_function_231019_2222_terminate.cpp  EDGE_fusion_function_231019_2222_types.h  Fuserxcov.cpp  buildInfo.mat  codeInfo.mat  compileInfo.mat  constvel.h  eigStandard.cpp  eigStandard.h  eml_setop.cpp  eml_setop.h  ensurePosDefMatrix.cpp  find.cpp  gaussEKFilter.cpp  gaussEKFilter.h  matchpairs.cpp  matchpairs.h  minPriorityQueue.h  mldivide.h  mrdivide_helper.cpp  mrdivide_helper.h  rtGetInf.cpp  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.h  rtwtypes.h  sort.cpp  sort.h  sortIdx.cpp  sortIdx.h  trackFuser.h  trackHistoryLogic.h  unique.cpp  unique.h  (+21 more)
sample_code/DataFusion/231020_matlab_converted/examples/: main.cpp  main.h
sample_code/DataFusion/231020_matlab_converted/html/: report.mldatx
sample_code/DataFusion/231020_matlab_converted/interface/: _coder_EDGE_fusion_function_231019_2222_api.cpp  _coder_EDGE_fusion_function_231019_2222_api.h  _coder_EDGE_fusion_function_231019_2222_info.cpp  _coder_EDGE_fusion_function_231019_2222_info.h  _coder_EDGE_fusion_function_231019_2222_mex.cpp  _coder_EDGE_fusion_function_231019_2222_mex.h
sample_code/DataFusion/include/: NatsConnManager.h  id_manager.hpp  main_datafusion.hpp  occupancy_algorithm.hpp
sample_code/DataFusion/matlab_converted/: EDGE_fusion_function_231017_2135.cpp  EDGE_fusion_function_231017_2135.h  EDGE_fusion_function_231017_2135_types.h  buildInfo.mat  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
sample_code/DataFusion/src/: EDGE_fusion_function_231019_2222.cpp  EDGE_fusion_function_231019_2222.h  EDGE_fusion_function_231019_2222_initialize.h  EDGE_fusion_function_231019_2222_manifest.txt  EDGE_fusion_function_231019_2222_rtwutil.h  EDGE_fusion_function_231019_2222_terminate.h  EDGE_fusion_function_231019_2222_types.h  Fuserxcov.h  SiteMapView.vue  codedescriptor.dmr  config.cpp  constvel.cpp  ensurePosDefMatrix.h  find.h  fuserSourceConfiguration.cpp  fuserSourceConfiguration.h  id_manager.cpp  id_manager.hpp  main.cpp  main.h  main_datafusion.cpp  main_datafusion.hpp  main_datafusion_dafu생성완성.cpp  main_datafusion_mon.cpp  main_datafusion_베이리스.cpp  main_datafusion_좌표계완성.cpp  minPriorityQueue.cpp  mldivide.cpp  objectTrack.h  occupancy 알고리즘.cpp  occupancy_algorithm.cpp  qrsolve.cpp  qrsolve.h  rtGetInf.h  rt_nonfinite.cpp  rtw_proj.tmw  trackFuser.cpp  xaxpy.cpp  xdladiv.h  xdlaln2.h  (+12 more)
sample_code/DataFusion/src/NATS_IMPLEMENTATION/: NatsConnManager.cpp  NatsConnManager.h
sample_code/RiskAssessment/: AI_CODE_MAP.md  CMakeLists.txt  RiskAssessment.arxml  config.ini  debugging.txt
sample_code/RiskAssessment/src/: RiskAssessmentUtils.cpp  RiskScenarios.cpp  config.cpp  config.hpp  main_riskassessment.cpp  main_riskassessment.hpp  main_riskassessment_mon.cpp  main_riskassessment_데모와원래버전.cpp
sample_code/RiskAssessment/src/AI_model/: AIInferencePipeline.cpp  AIInferencePipeline.hpp  AutoLabelWriter.cpp  AutoLabelWriter.hpp
sample_code/RiskAssessment/src/AI_model/log/: auto_labels_20260323_191129.csv
sample_code/RiskAssessment/src/NATS/: NatsConnManager.cpp  NatsConnManager.h  NatsHandler.cpp  NatsHandler.hpp  config.cpp
sample_code/RiskAssessment/src/NATS_IMPLEMENTATION/: NatsConnManager.cpp
sample_code/RiskAssessment/tools/ai_offline/: onnx_infer.py  preprocess_autolabels.py
sample_code/RiskAssessment/tools/ai_training/: train_risk.py
sample_code/RiskAssessment/tools/ai_training/artifacts/: risk_meta.json  risk_mlp.onnx  risk_mlp.onnx.data
sample_code/RiskAssessment/tools/ai_training/log/: auto_labels_20260323_190137.csv  auto_labels_20260323_191129.csv  auto_labels_20260323_192426.csv
sample_code/RiskAvoidance/: CMakeLists.txt  RiskAvoidance.arxml
sample_code/RiskAvoidance/src/: main_riskavoidance.cpp
sample_code/TaskManagerPathBuilder/: CMakeLists.txt  TaskManagerPathBuilder.arxml
sample_code/TaskManagerPathBuilder/src/: main_taskmanagerpathbuilder.cpp
sample_code/common/e2e/: e2e_dataid_mapping.json
sample_code/common/etc/: NatsConnManager.cpp  NatsConnManager.h  adcm_zlib.cpp  adcm_zlib.h  udpReceiver.cpp  udpReceiver.h  udpSender.cpp  udpSender.h
sample_code/common/logger/src/: logger.cpp
sample_code/common_sa/e2e/: e2e_statemachines.json
sample_code_opti/DataFusion/include/: id_manager.hpp  main_datafusion.hpp
sample_code_opti/DataFusion/src/: id_manager.cpp  main_datafusion.cpp
sample_code_opti/RiskAssessment/: CMakeLists.txt
sample_code_opti/RiskAssessment/src/: main_riskassessment.cpp  main_riskassessment.hpp
sample_code_orin(temp)/DataFusion/: CMakeLists.txt
sample_code_orin(temp)/DataFusion/include/: main_datafusion.hpp
sample_code_orin/DataFusion/src/: config.cpp  main_datafusion.cpp
sample_code_orin/RiskAssessment/: CMakeLists.txt
sample_code_orin/RiskAssessment/src/: RiskAssessmentUtils.cpp  RiskScenarios.cpp  main_riskassessment.cpp  main_riskassessment.hpp
sample_code_orin/TaskManagerPathBuilder/: CMakeLists.txt
sample_code_sa/DataFusion/: CMakeLists.txt  config.ini
sample_code_sa/DataFusion/src/: config.cpp  main_datafusion.cpp
sample_code_sa/RiskAssessment/src/: main_riskassessment.cpp  main_riskassessment.hpp
sample_code_sa/common/e2e/: e2e_dataid_mapping.json
산출물/완료/: [정량적목표5] 위험 환경 시나리오 정의서 10종.xlsx  [정량적목표5] 위험 환경 판단 시나리오 개수.hwp
(+101 files in other folders)
